# llm-paper-assistant

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: llm_assistant.ipynb  test_langchain_groq.ipynb  test_langchain_ollama.ipynb
src/: assistant_groq.py  main.py  pdf2md.py  pdf_extractor.py  utils.py
