[project]
name = "llm-paper-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "groq>=0.31.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.8",
    "markdown>=3.9",
    "mdutils>=1.8.0",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "tokenizers>=0.22.0",
    "unstructured>=0.18.14",
]
